--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/1.Client-connection-to-oceanbase-database/03.Connect-oceanbase-tenants-through-obclient.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/1.Client-connection-to-oceanbase-database/03.Connect-oceanbase-tenants-through-obclient.md
@@ -13,7 +13,7 @@ Contact OceanBase Technical Support to obtain the installation package of OBClie
 2. Specify the operating parameters of OBClient in the following format:
 
    ```sql
-   $obclient -h10.0.0.0 -P2881 -usys@Oracle -p_**1***_ -A
+   $obclient -h10.0.0.0 -P2881 -usys@Oracle -p****** -A
    ```
 
    > **Note**
@@ -39,7 +39,7 @@ Contact OceanBase Technical Support to obtain the installation package of OBClie
 Use OBClient to connect to an Oracle tenant of OceanBase Database:
 
 ```sql
-$obclient -h10.0.0.0 -P2881 -usys@Oracle -p_**1***_ -A
+$obclient -h10.0.0.0 -P2881 -usys@Oracle -p****** -A
 obclient: [Warning] Using a password on the command line interface can be insecure.
 Welcome to the OceanBase monitor.  Commands end with ; or \g.
 Your OceanBase connection id is 3221688068
