--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/03.Modify-user-name-and-password.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/03.Modify-user-name-and-password.md
@@ -56,9 +56,9 @@ ALTER USER 'username' IDENTIFIED BY 'password';
 
 ### Examples
 
-Change the password of the ny user to `**1***`.
+Change the password of the ny user to `******`.
 
 ```sql
-obclient> ALTER USER `ny` IDENTIFIED BY '**1***';
+obclient> ALTER USER `ny` IDENTIFIED BY '******';
 Query OK, 0 rows affected
 ```
