--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/4.Query-table-data/01.about-query.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/4.Query-table-data/01.about-query.md
@@ -19,7 +19,7 @@ The preceding example is a simple SQL query statement. table_list can also be a 
 Note that in an Oracle tenant, table_list can be replaced with a DUAL table, which is a dummy table. In this case, select_list does not specify a specific column. Instead, it is a constant or variable. See the following example SQL statement:
 
 ```javascript
-$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p**1*** tpcc
+$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p****** tpcc
 obclient> select 'Medium', 6*6 from dual;
 +-------+-----+
 | 'Medium'  | 6*6 |
