--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/6.common-errors-and-solutions-oracle/02.database-connection-error.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/6.common-errors-and-solutions-oracle/02.database-connection-error.md
@@ -18,7 +18,7 @@ ERROR 2003 (HY000): Can't connect to MySQL server on '10.10.10.10' (113)
 
 ```unknow
 [admin@*******.****sqa /home/admin]
-$obclient -h10.10.10.10 -P111 -usys@Oracle -p***1*** -A
+$obclient -h10.10.10.10 -P111 -usys@Oracle -p******* -A
 ERROR 2003 (HY000): Can't connect to MySQL server on '10.10.10.10' (113)
 ```
 
