--- a/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/3.deploy-the-oceanbase-cluster-2/2.deploy-three-oceanbase-replica-clusters.md
+++ b/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/3.deploy-the-oceanbase-cluster-2/2.deploy-three-oceanbase-replica-clusters.md
@@ -272,7 +272,7 @@ Before you install OceanBase Database, make sure that the following prerequisite
    By default, the password of the root user under the sys tenant is empty. After successful initialization, you need to change the password.
 
    ```sql
-   obclient> ALTER USER root IDENTIFIED BY '**1***';
+   obclient> ALTER USER root IDENTIFIED BY '******';
    Query OK, 0 rows affected
    ```
 
