--- a/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/4.deploy-obproxy-4/1.deploy-obproxy-by-using-command-lines.md
+++ b/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/4.deploy-obproxy-4/1.deploy-obproxy-by-using-command-lines.md
@@ -104,7 +104,7 @@ Create the proxyro user and grant the `SELECT` privilege to the user.
 $ obclient -h127.1 -uroot@sys -P2881 -p -c -A
 Enter password:
 
-obclient> CREATE USER proxyro IDENTIFIED BY '**1***';
+obclient> CREATE USER proxyro IDENTIFIED BY '******';
 Query OK, 0 rows affected
 
 obclient> GRANT SELECT ON *.* TO proxyro;
