--- a/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/5.create-an-oceanbase-tenant-2/2.create-a-tenant-2.md
+++ b/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/5.create-an-oceanbase-tenant-2/2.create-a-tenant-2.md
@@ -171,12 +171,12 @@ opt_set_sys_var:
 
 Example:
 
-Set the password of the `root` user under the `mysql001` tenant to `**1***`.
+Set the password of the `root` user under the `mysql001` tenant to `******`.
 
 ```sql
 $ obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p -A
 Enter password:
 
-obclient> SET PASSWORD = PASSWORD('**1***');
+obclient> SET PASSWORD = PASSWORD('******');
 Query OK, 0 rows affected
 ```
