--- a/en-US/5.data-migration/6.use-datax-to-migrate-data-1.md
+++ b/en-US/5.data-migration/6.use-datax-to-migrate-data-1.md
@@ -143,7 +143,7 @@ If the source and destination databases cannot connect to the DataX server at th
                       "parameter": {
                           "writeMode": "replace",
                           "username": "tpcc",
-                          "password": "123456",
+                          "password": "******",
                           "column": [
                               "*"
                           ],
