--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -166,7 +166,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    启动 observer 进程。
 
    ```shell
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881' -c 10001 -n obdemo -o "system_memory=16G,datafile_size=100G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r 'xxx.xxx.xxx.xxx:2882:2881' -c 10001 -n obdemo -o "system_memory=16G,datafile_size=100G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    -bash-4.2$ sleep 5
    -bash-4.2$ ps -ef|grep observer
    ```
@@ -185,7 +185,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
     obclient> SET SESSION ob_query_timeout=1000000000;
     Query OK, 0 rows affected
          
-    obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER '10.10.10.1:2882';
+    obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER 'xxx.xxx.xxx.xxx:2882';
     Query OK, 0 rows affected
     ```
 
