--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
@@ -52,7 +52,7 @@ Query OK, 0 rows affected
 
 obclient [test]> exit;
 
-$obclient -h192.168.0.0 -ut***@obbmsql#obdemo -P2883 -p**1***  test
+$obclient -h192.168.0.0 -ut***@obbmsql#obdemo -P2883 -p******  test
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221487662
 Server version: OceanBase 4.0.0.0 (r100000252022102910-df01cef074936b9c9f177697500fad1dc304056f) (Built Oct 29 2022 10:27:50)
@@ -100,7 +100,7 @@ Query OK, 1 row affected
 ```sql
 obclient [test]> exit;
 
-$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p**1***  test
+$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p******  test
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221487662
 Server version: OceanBase 4.0.0.0 (r100000252022102910-df01cef074936b9c9f177697500fad1dc304056f) (Built Oct 29 2022 10:27:50)
