--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
@@ -19,7 +19,7 @@ SELECT select_list FROM table_list；
 需要注意的是，在 Oracle 租户里，table_list 也可以用空表 dual 代替，这样 select_list 就不是具体的列，而是常量或者变量值。如下面这个 SQL：
 
 ```javascript
-$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p**1*** tpcc
+$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p****** tpcc
 obclient> select '中', 6*6 from dual;
 +-------+-----+
 | '中'  | 6*6 |
