--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
@@ -54,7 +54,7 @@ Query OK, 0 rows affected
 ```sql
 obclient [SYS]> exit;
 
-$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p**1***
+$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p******
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221487661
 Server version: OceanBase 4.0.0.0 (r100000252022102910-df01cef074936b9c9f177697500fad1dc304056f) (Built Oct 29 2022 10:27:50)
@@ -102,7 +102,7 @@ Query OK, 1 row affected
 ```sql
 obclient [SYS]> exit;
 
-$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p**1***
+$obclient -h192.168.0.0 -utpcc@obbmsql#obdemo -P2883 -p******
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221487664
 Server version: OceanBase 4.0.0.0 (r100000252022102910-df01cef074936b9c9f177697500fad1dc304056f) (Built Oct 29 2022 10:27:50)
