--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md
@@ -10,6 +10,11 @@ OceanBase 独立版（Antman）是一个提供一键部署 OCP，OMS，ODC 等 O
 
 1. 将 oat-cli 的安装包拷贝到任意一台服务器。
 
+   <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <p>请联系技术支持人员获取 Antman 安装包。</p>
+   </main>
+
 2. 使用 root 用户登录该机器，执行以下命令，安装 oat-cli。
 
    有关最新版本 oat-cli 安装包的获取方式，请联系 OceanBase 技术支持。
