--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/5.configure-host-information.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/5.configure-host-information.md
@@ -10,7 +10,7 @@
 
    ```shell
    [root@xxx /]# vi /etc/hosts
-   10.10.10.1 observer1
+   xxx.xxx.xxx.xxx observer1
    ```
 
    <main id="notice" type='notice'>
@@ -36,5 +36,5 @@
 
    ```shell
    [root@xxx /]# hostname -i
-   10.10.10.1
+   xxx.xxx.xxx.xxx
    ```
