--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
@@ -123,10 +123,10 @@ OBProxy 需要跟后端 OBServer 节点保持通信。所以需要提前在 Ocea
 创建 proxyro 用户并授予 `SELECT` 权限。
 
 ```sql
-$obclient -h10.10.10.1 -P2881 -uroot@sys -p
+$obclient -hxxx.xxx.xxx.1 -P2881 -uroot@sys -p
 Enter password:
 
-obclient [(none)]> CREATE USER proxyro IDENTIFIED BY '123456';
+obclient [(none)]> CREATE USER proxyro IDENTIFIED BY '******';
 Query OK, 0 rows affected
 
 obclient [(none)]> GRANT SELECT ON *.* TO proxyro;
@@ -153,7 +153,7 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
    启动代码如下：
 
    ```shell
-   cd /opt/taobao/install/obproxy && bin/obproxy -r "10.10.10.1:2881;10.10.10.2:2881;10.10.10.3:2881" -p 2883 -o "observer_sys_password=$sha1_value,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c tenant_name
+   cd /opt/taobao/install/obproxy && bin/obproxy -r "xxx.xxx.xxx.1:2881;xxx.xxx.xxx.2:2881;xxx.xxx.xxx.3:2881" -p 2883 -o "observer_sys_password=$sha1_value,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c tenant_name
    ```
 
   <main id="notice" type='explain'>
@@ -177,9 +177,9 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [root@xxx admin]# su - admin
-   -bash-4.2$ cd /opt/taobao/install/obproxy && bin/obproxy -r "10.10.10.1:2881" -p 2883 -o "observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c test3241
-   bin/obproxy -r 10.10.10.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
-   rs list: 10.10.10.1:2881
+   -bash-4.2$ cd /opt/taobao/install/obproxy && bin/obproxy -r "xxx.xxx.xxx.1:2881" -p 2883 -o "observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c test3241
+   bin/obproxy -r xxx.xxx.xxx.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
+   rs list: xxx.xxx.xxx.1:2881
    listen port: 2883
    optstr: observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false
    cluster_name: test3241
@@ -195,7 +195,7 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [root@xxx admin]# ps -ef|grep obproxy
-   admin     79111      0  6 17:32 ?        00:00:58 bin/obproxy -r 10.10.10.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
+   admin     79111      0  6 17:32 ?        00:00:58 bin/obproxy -r xxx.xxx.xxx.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
    ```
 
 ## 后续操作
@@ -210,7 +210,7 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -h10.10.10.1 -P2883 -uroot@sys#test3241 -p
+   $obclient -hxxx.xxx.xxx.1 -P2883 -uroot@sys#test3241 -p
    Enter password:
    Welcome to the OceanBase.  Commands end with ; or \g.
    Your OceanBase connection id is 1
@@ -227,7 +227,7 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -h10.10.10.1 -P2883 -utest3241:sys:root -p
+   $obclient -hxxx.xxx.xxx.1 -P2883 -utest3241:sys:root -p
    Enter password:
    Welcome to the OceanBase.  Commands end with ; or \g.
    Your OceanBase connection id is 4
