--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
@@ -180,13 +180,13 @@ opt_set_sys_var:
 
 示例如下：
 
-将租户 `mysql001` 的 `root` 用户密码设置为 `**1***`。
+将租户 `mysql001` 的 `root` 用户密码设置为 `******`。
 
 ```sql
 $ obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p -A
 Enter password:
 
-obclient> SET PASSWORD = PASSWORD('**1***');
+obclient> SET PASSWORD = PASSWORD('******');
 Query OK, 0 rows affected
 ```
 
