--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/7.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/7.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -10,7 +10,7 @@
 
 |   MySQL 数据库信息（源库）|      示例值     |
 |---------------|----------------|
-| 主机地址      | 10.10.10.1    |
+| 主机地址      | xxx.xxx.xxx.xxx    |
 | 端口号        | 3306             |
 | 用户名称      | root             |
 | 用户的密码    | ******           |
@@ -97,7 +97,7 @@ $vi test_mysql_to_ob.json
             "connection": [
               {
                 "jdbcUrl": [
-                  "jdbc:mysql://10.10.10.1:3306/test_mysql_to_ob"
+                  "jdbc:mysql://xxx.xxx.xxx.xxx:3306/test_mysql_to_ob"
                 ],
                 "table": [
                   "tbl1"
