--- a/zh-CN/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
+++ b/zh-CN/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
@@ -110,7 +110,7 @@ $cat student.sql
 3,"ali",95
 
 [root@***** /home/admin]
-$obclient -h10.0.0.0 -uroot@MySQL -P2881 -p**1***
+$obclient -h10.0.0.0 -uroot@MySQL -P2881 -p******
 
 obclient> create table student_1 (ID int primary key,name varchar(128),score int);
 
