--- a/zh-CN/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
+++ b/zh-CN/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
@@ -53,7 +53,7 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 |              数据库信息                  |     示例值   |
 |-----------------------------------------|---------------|
 | 集群名                                  | test4000       |
-| OceanBase DataBase Proxy (ODP) 主机地址 | 10.10.10.1 |
+| OceanBase DataBase Proxy (ODP) 主机地址 | xxx.xxx.xxx.xxx |
 | OceanBase DataBase Proxy (ODP) 端口号   | 2883           |
 | sys 租户下 root 用户的密码               | ******    |
 | 源租户名称（MySQL 模式）                   | mysql001       |
@@ -82,11 +82,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
    2022-12-26 14:11:57 [INFO] Parsed args:
    [--ddl] true
    [--file-path] /home/admin/test_migrate_data/ddl_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] mysql001
@@ -215,11 +215,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle001 -D obloader_user01 --ddl --all -f /home/admin/test_migrate_data/ddl_data
+   $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle001 -D obloader_user01 --ddl --all -f /home/admin/test_migrate_data/ddl_data
    2022-12-26 16:16:35 [INFO] Parsed args:
    [--ddl] true
    [--file-path] /home/admin/test_migrate_data/ddl_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obloader_user01
    [--tenant] oracle001
@@ -310,11 +310,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
    2022-12-26 14:51:18 [INFO] Parsed args:
    [--csv] true
    [--file-path] /home/admin/test_migrate_data/csv_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] mysql001
@@ -419,11 +419,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle001 -D obloader_user01 --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+   $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle001 -D obloader_user01 --csv --table '*' -f /home/admin/test_migrate_data/csv_data
    2022-12-26 16:54:36 [INFO] Parsed args:
    [--csv] true
    [--file-path] /home/admin/test_migrate_data/csv_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obloader_user01
    [--tenant] oracle001
