--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md
@@ -15,7 +15,7 @@ You can use a MySQL client to connect to a MySQL tenant of OceanBase Database. T
 2. Enter the operating parameters of MySQL in the following format:
 
    ```sql
-   $mysql -h192.168.0.0 -uroot@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+   $mysql -h192.168.0.0 -uroot@obmysql#obdemo -P2883 -p****** -c -A oceanbase
    ```
 
    > **Note**
@@ -45,7 +45,7 @@ You can use a MySQL client to connect to a MySQL tenant of OceanBase Database. T
 The following sample code shows how to connect to a MySQL tenant of OceanBase Database from a MySQL client:
 
 ```sql
-$mysql -h192.168.0.0 -uroot@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+$mysql -h192.168.0.0 -uroot@obmysql#obdemo -P2883 -p****** -c -A oceanbase
 Welcome to the MariaDB monitor.  Commands end with ; or \g.
 Your MySQL connection id is 62488
 Server version: 5.6.25 OceanBase 2.2.20 (...) (Built Aug 10 2019 15:27:33)
