--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/3.connect-oceanbase-tenants-through-obclient.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/3.connect-oceanbase-tenants-through-obclient.md
@@ -13,7 +13,7 @@ Contact OceanBase Technical Support to obtain the installation package of OBClie
 2. Specify the operating parameters of OBClient in the following format:
 
    ```sql
-   $obclient -h10.0.0.0 -P2881 -uroot@MySQL -p_**1***_ -A
+   $obclient -h10.0.0.0 -P2881 -uroot@MySQL -p****** -A
    ```
 
    > **Note**
@@ -42,7 +42,7 @@ Contact OceanBase Technical Support to obtain the installation package of OBClie
 Connect to a MySQL tenant of OceanBase Database by using OBClient
 
 ```sql
-$obclient -h10.0.0.0 -P2881 -uroot@MySQL -p_**1***_ -A
+$obclient -h10.0.0.0 -P2881 -uroot@MySQL -p****** -A
 obclient: [Warning] Using a password on the command line interface can be insecure.
 Welcome to the OceanBase monitor.  Commands end with ; or \g.
 Your OceanBase connection id is 3221666749
