--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/2.application-development-1/2.python-application-1/02.python-apis.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/2.application-development-1/2.python-application-1/02.python-apis.md
@@ -19,7 +19,7 @@ import jaydebeapi
 def ob_test():     //ob_test() is a custom Python project name.
         url = 'jdbc:oceanbase://host:port/database'
         user = '**u***'
-        password = '**1***'
+        password = '******'
         driver = 'com.alipay.oceanbase.jdbc.Driver'
         jarFile = './oceanbase-client-2.2.3.jar'
         sqlStr = 'select * from test_python'     // SQL test statement
