--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
@@ -95,16 +95,16 @@ start_and_end_option:
      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能使用本地 Client （即：OBClient 所在机器与连接的 OBServer 节点的 IP 地址相同。）执行修改该全局变量的 SQL 语句。</p>
    </main>
 
-    1. 登录的要连接的 OBServer 节点。
+    1. 登录到要连接的 OBServer 节点。
 
         ```bash
-        [xxx@xxx /home/admin]# ssh admin@10.10.10.1
+        [xxx@xxx /home/admin]# ssh admin@xxx.xxx.xxx.xxx
         ```
 
     2. 使用 OBClient 客户端通过直连的方式连接租户 `mysql001`。
 
         ```bash
-        [admin@xxx /home/admin]# obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p -A
+        [admin@xxx /home/admin]# obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p -A
         Enter password:
         Welcome to the OceanBase.  Commands end with ; or \g.
         Your OceanBase connection id is 3221493926
