--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -26,7 +26,7 @@ obclient> SET GLOBAL ob_trx_timeout=1000000000,GLOBAL ob_query_timeout=100000000
 下述示例语句展示了如何在 mysqldump 中备份 OceanBase 数据库中的数据，运行该语句后会生成一个 SQL 格式的文件：
 
 ```shell
-mysqldump -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p**1*** --skip-triggers  --databases db1  db2  db3  --skip-extended-insert  > /tmp/data.sql
+mysqldump -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** --skip-triggers  --databases db1  db2  db3  --skip-extended-insert  > /tmp/data.sql
 ```
 
 下述表格为上述备份语句的参数说明：
@@ -58,7 +58,7 @@ source  /tmp/data.sql
 ### 导出指定数据库的表结构（不包括数据）
 
 ```sql
-mysqldump -h 127.1 -u**** -P3306 -p**1***  -d TPCH --compact > tpch_ddl.sql
+mysqldump -h 127.1 -u**** -P3306 -p******  -d TPCH --compact > tpch_ddl.sql
 ```
 
 在导出的脚本中：
@@ -109,7 +109,7 @@ MySQL [oceanbase]> show global variables like '%foreign%';
 ### 导出指定数据库的表数据（不包括结构）
 
 ```shell
-mysqldump -h 127.1 -u**** -P3306 -p**1*** -t TPCH  > tpch_data.sql
+mysqldump -h 127.1 -u**** -P3306 -p****** -t TPCH  > tpch_data.sql
 ```
 
 mysqldump 导出的数据初始化 SQL 里会首先将表锁住，禁止其他会话写。然后使用 `insert` 写入数据。每个 `insert` 后面的 `value` 里会有很多值。这是批量 `insert`。
