--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -14,9 +14,9 @@ CloudCanal 是一款数据迁移同步工具，帮助企业快速构建高质量
 
 ## 前置条件
 
-1. 参考 [CloudCanal 安装部署参考文档](https://www.clougence.com/cc-doc/operation/install_linux/) 完成 CloudCanal 社区版的安装部署。
+1. 参考 [CloudCanal 安装部署参考文档](https://www.clougence.com/cc-doc/install/install_linux) 完成 CloudCanal 社区版的安装部署。
 
-2. 参考 [安装 oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html) 完成 oblogproxy 的安装部署。
+2. 参考 [安装 oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-10000000001508519) 完成 oblogproxy 的安装部署。
 
 ## 操作步骤
 
@@ -50,7 +50,7 @@ CloudCanal 是一款数据迁移同步工具，帮助企业快速构建高质量
          OceanBase 数据源设置：
 
          * 网络地址：填写连接 OceanBase 数据库的 IP，直连或通过 ODP 连接。
-         * oblogproxy host：oblogproxy 的 IP 地址。OceanBase 数据库作为源库增量同步时，不可以为空；OceanBase 数据库作为目标库时，可为空。有关 oblogproxy 的详细信息，请参考 [oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html)。
+         * oblogproxy host：oblogproxy 的 IP 地址。OceanBase 数据库作为源库增量同步时，不可以为空；OceanBase 数据库作为目标库时，可为空。有关 oblogproxy 的详细信息，请参考 [oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-10000000001508519)。
          * OceanBaseRpcPort：OceanBase Rpc 端口，默认 2882。
          * 认证方式：分别为 **账号密码**、**有账号密码** 和 **无账号密码**。默认账号密码。
          * 账号：连接 OceanBase 数据库的用户名。直连格式：**用户名@租户名称**；ODP 连接格式：**用户名@租户名称#集群名称**。
