--- a/zh-CN/5.data-migration/9.data-migration-between-oceanbase-databases/4.migrate-data-from-oralce-tenant-to-mysql-tenant.md
+++ b/zh-CN/5.data-migration/9.data-migration-between-oceanbase-databases/4.migrate-data-from-oralce-tenant-to-mysql-tenant.md
@@ -53,7 +53,7 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 |              数据库信息                  |     示例值   |
 |-----------------------------------------|---------------|
 | 集群名                                  | test4000       |
-| OceanBase DataBase Proxy (ODP) 主机地址 | 10.10.10.1 |
+| OceanBase DataBase Proxy (ODP) 主机地址 | xxx.xxx.xxx.xxx |
 | OceanBase DataBase Proxy (ODP) 端口号   | 2883           |
 | sys 租户下 root 用户的密码               | ******    |
 | 源租户名称（Oracle 模式）                  | oracle001       |
@@ -82,11 +82,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
     ```bash
     [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-    $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
+    $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
     2022-12-26 18:41:07 [INFO] Parsed args:
     [--ddl] true
     [--file-path] /home/admin/test_migrate_data/ddl_data
-    [--host] 10.10.10.1
+    [--host] xxx.xxx.xxx.xxx
     [--port] 2883
     [--user] obdumper_user01
     [--tenant] oracle001
@@ -212,11 +212,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
     ```bash
     [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-    $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --ddl --all -f /home/admin/test_migrate_data/ddl_data
+    $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --ddl --all -f /home/admin/test_migrate_data/ddl_data
     2022-12-27 11:00:35 [INFO] Parsed args:
     [--ddl] true
     [--file-path] /home/admin/test_migrate_data/ddl_data
-    [--host] 10.10.10.1
+    [--host] xxx.xxx.xxx.xxx
     [--port] 2883
     [--user] obloader_user01
     [--tenant] mysql001
@@ -298,11 +298,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
     ```bash
     [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-    $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+    $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
     2022-12-27 10:02:20 [INFO] Parsed args:
     [--csv] true
     [--file-path] /home/admin/test_migrate_data/csv_data
-    [--host] 10.10.10.1
+    [--host] xxx.xxx.xxx.xxx
     [--port] 2883
     [--user] obdumper_user01
     [--tenant] oracle001
@@ -416,11 +416,11 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
 
     ```bash
     [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-    $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+    $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --csv --table '*' -f /home/admin/test_migrate_data/csv_data
     2022-12-27 11:17:21 [INFO] Parsed args:
     [--csv] true
     [--file-path] /home/admin/test_migrate_data/csv_data
-    [--host] 10.10.10.1
+    [--host] xxx.xxx.xxx.xxx
     [--port] 2883
     [--user] obloader_user01
     [--tenant] mysql001
