--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/1.Client-connection-to-oceanbase-database/02.Connect-to-oceanbase-tenants-through-Oracle-clients.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/1.Client-connection-to-oceanbase-database/02.Connect-to-oceanbase-tenants-through-Oracle-clients.md
@@ -15,7 +15,7 @@ You can use an Oracle client to connect to an Oracle tenant of OceanBase Databas
 2. Enter the operating parameters of Oracle in the following format:
 
    ```sql
-   $obclient -h10.0.0.0 -P2881 -usys@Oracle -p_**1***_ -A
+   $obclient -h10.0.0.0 -P2881 -usys@Oracle -p****** -A
    ```
 
    > **Note**
@@ -41,7 +41,7 @@ You can use an Oracle client to connect to an Oracle tenant of OceanBase Databas
 Use the Oracle client to connect to an Oracle tenant of OceanBase Database:
 
 ```sql
-$obclient -h10.0.0.0 -P2881 -usys@Oracle -p_**1***_ -A
+$obclient -h10.0.0.0 -P2881 -usys@Oracle -p****** -A
 obclient: [Warning] Using a password on the command line interface can be insecure.
 Welcome to the OceanBase monitor.  Commands end with ; or \g.
 Your OceanBase connection id is 3221688068
