--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/02.View-currently-connected-databases.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/02.View-currently-connected-databases.md
@@ -58,7 +58,7 @@ SELECT * FROM all_users;
    +------------+------+----------------------+------+---------+------+--------+------------------+
    | ID         | USER | HOST                 | DB   | COMMAND | TIME | STATE  | INFO             |
    +------------+------+----------------------+------+---------+------+--------+------------------+
-   | 3221487786 | SYS  | 100.88.114.135:52340 | SYS  | Query   |    0 | ACTIVE | SHOW PROCESSLIST |
+   | 3221487786 | SYS  | xxx.xxx.xxx.xxx:52340 | SYS  | Query   |    0 | ACTIVE | SHOW PROCESSLIST |
    +------------+------+----------------------+------+---------+------+--------+------------------+
    1 row in set
    ```
