--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
@@ -8,7 +8,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 在安装 OceanBase 数据库之前，需要确认以下信息：
 
-* OBServer 节点已完成相关配置。有关配置 OBServer 节点详细信息，请参 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
+* OBServer 服务器已完成相关配置。有关配置 OBServer 服务器详细信息，请参见 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
 
 * 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../../4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md)。
 
@@ -271,7 +271,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    sys 租户的 root 用户密码默认为空，初始化成功后请修改密码。
 
    ```sql
-   obclient> ALTER USER root IDENTIFIED BY '**1***';
+   obclient> ALTER USER root IDENTIFIED BY '******';
    Query OK, 0 rows affected
    ```
 
