--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/1.use-dbcat-to-migrate-oceanbase-table-structure-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/1.use-dbcat-to-migrate-oceanbase-table-structure-to-mysql-database.md
@@ -79,49 +79,48 @@ bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D <database> --from 
 
 必选参数：
 
-| 选项 | 有无参数 | 英文描述 | 中文描述 |
-| --- | -------- | ------ | ------ |
-| -H/--host | Y  | Host on which database is located   | 数据库服务器的 IP 地址 |
-| -P/--port |   Y  | TCP/IP port number for connection   | 数据库服务器的端口   |
-| -u/--user  | Y  | Database user to use when connecting to server | 登录数据库的用户名 |
-| -t/--tenant | Y  | Interpret the tenant name for oceanbase | 连接 OceanBase 集群需要提供租户名 |
-| -c/--cluster | Y  |Interpret the cluster name for oceanbase | 连接 OceanBase 集群需要提供集群名 |
-| -p/--password | Y | Password to use when connecting to server | 登录数据库的密码 |
-| -D/--database | Y | Interpret the name as source database name | 数据库名（源库），DB2 须区分数据库名和模式名 |
-| --service-id | Y | Interpret the service id for oracle | 连接 Oracle 数据库需要提供服务 ID |
-| --service-name | Y | Interpret the service name for oracle |  连接 Oracle 数据库需要提供服务名 |
-| --as-sysdba | N | Iterpret logon as sysdba role for oracle | 连接 Oracle 数据库 sysdba 角色 |
-| --sys-user | Y | Interpret username for sys tenant | 连接 OceanBase 集群系统租户的用户名 |
-| --sys-password | Y | Interpret password for sys tenant | 连接 OceanBase 集群系统租户的密码 |
-| --schema | Y | Interpret the name as source schema for DB2 | 模式名（源库），非DB2，模式名与数据名相同 |
-| --from | Y | Interpret the type as source database type | 源库的类型 |
-| --to | Y | Interpret the type as target database type | 目标库的类型 |
-| --all | N | Resolve all the database objects | 所有的数据库对象（默认：TABLE, VIEW）|
+| 选项 | 有无参数 | 中文描述 |
+| --- | -------- | ------ |
+| -H/--host | Y  | 数据库服务器的 IP 地址 |
+| -P/--port |   Y  | 数据库服务器的端口   |
+| -u/--user  | Y  | 登录数据库的用户名 |
+| -t/--tenant | Y  | 连接 OceanBase 集群需要提供租户名 |
+| -c/--cluster | Y  | 连接 OceanBase 集群需要提供集群名 |
+| -p/--password | Y | 登录数据库的密码 |
+| -D/--database | Y | 数据库名（源库），DB2 须区分数据库名和模式名 |
+| --service-id | Y | 连接 Oracle 数据库需要提供服务 ID |
+| --service-name | Y | 连接 Oracle 数据库需要提供服务名 |
+| --as-sysdba | N | 连接 Oracle 数据库 sysdba 角色 |
+| --sys-user | Y | 连接 OceanBase 集群系统租户的用户名 |
+| --sys-password | Y | 连接 OceanBase 集群系统租户的密码 |
+| --schema | Y | 模式名（源库），非DB2，模式名与数据名相同 |
+| --from | Y | 源库的类型 |
+| --to | Y | 目标库的类型 |
+| --all | N | 所有的数据库对象（默认：TABLE, VIEW）|
 
 可选参数：
 
-| 选项 | 有无参数 | 英文描述 | 中文描述 |
-| ---- | ------- | ------ | ------ |
-| -f/--file | Y | Interpret the output path of the *.sql | sql 文件的输出路径 |
-| --offline | N | Use offline mode | 使用离线模式 |
-| --target-schema | Y | Interpret the name as target schema | 模式名（目标库）|
-| --table | Y | Resolve the specified tables in the database | 导出的表 |
-| --view | Y | Resolve the specified views in the database | 导出的视图 |
-| --trigger | Y | Resolve the specified triggers in the database | 导出的触发器 |
-| --synonym | Y | Resolve the specified synonyms in the database | 导出的同义词 |
-| --sequence | Y | Resolve the specified sequences in the database | 导出的序列 |
-| --function | Y | Resolve the specified functions in the database | 导出的函数 |
-| --procedure | Y | Resolve the specified procedures in the database | 导出的存储过程 |
-| --dblink | Y | Resolve the specified dblinks in the database | 导出所有的 DBLink |
-| --type | Y | Resolve the specified types in the database | 导出的 type |
-| --type-body | Y | Resolve the specified type bodies in the database | 导出的 type body |
-| --package | Y | Resolve the specified packages in the database | 导出的 package |
-| --package-body | Y | Resolve the specified package bodies in the database | 导出的 package body |
-| --no-quote | N | Generate DDL without quote character | 产生的 DDL 不带引号 |
-| --no-schema | N | Generate DDL without schema name | 产生的 DDL 不带模式名 |
-| --target-schema | Y | Interpret the name as source database name | 产生的 DDL 中使用指定的模式名 |
-| --exclude-type | Y | Interpret the name as target schema |搭配 --all 使用，如：--all --exclude-type 'TABLE' 表示排除 TABLE 类型 |
-
+| 选项 | 有无参数 | 中文描述 |
+| ---- | ------- | ------ |
+| -f/--file | Y | sql 文件的输出路径 |
+| --offline | N | 使用离线模式 |
+| --target-schema | Y | 模式名（目标库）|
+| --table | Y | 导出的表 |
+| --view | Y | 导出的视图 |
+| --trigger | Y | 导出的触发器 |
+| --synonym | Y | 导出的同义词 |
+| --sequence | Y | 导出的序列 |
+| --function | Y | 导出的函数 |
+| --procedure | Y | 导出的存储过程 |
+| --dblink | Y | 导出所有的 DBLink |
+| --type | Y | 导出的 type |
+| --type-body | Y | 导出的 type body |
+| --package | Y | 导出的 package |
+| --package-body | Y | 导出的 package body |
+| --no-quote | N | 产生的 DDL 不带引号 |
+| --no-schema | N | 产生的 DDL 不带模式名 |
+| --target-schema | Y | 产生的 DDL 中使用指定的模式名 |
+| --exclude-type | Y | 搭配 --all 使用，如：--all --exclude-type 'TABLE' 表示排除 TABLE 类型 |
 
 这里以导出 4.0.0 版本的 OceanBase 集群中的 MySQL 租户下 database 为 test 的所有对象的结构，并将其迁移到 MySQL 5.7 版本下为示例。
 
@@ -135,19 +134,19 @@ bin/dbcat convert -H 172.30.xxx.xxx  -P 2883 -uroot -pxxxxx -D test --from obmys
 
 - 参数中的 --from 和 --to 为源端和目的端的数据库类型，需要详细到版本号。当前 dbcat 支持的源端和目标端数据库详细如下：
 
-  | 源端数据库类型  |	目标端数据库类型 |
+  | 源端数据库类型  | 目标端数据库类型 |
   |----------------|----------------|
-  |TiDB |	OBMYSQL |
-  |PG |	OBMYSQL |
-  |SYBASE |	OBORACLE |
-  |MYSQL |	OBMYSQL |
-  |ORACLE |	OBORACLE |
-  |ORACLE |	OBMYSQL |
-  |DB2 IBM i	 | OBORACLE |
-  |DB2 LUW	 | OBORACLE |
-  |DB2 LUW |	OBMYSQL |
-  |OBMYSQL	 | MYSQL |
-  |OBORACLE |	ORACLE |
+  |TiDB | OBMYSQL |
+  |PG | OBMYSQL |
+  |SYBASE | OBORACLE |
+  |MYSQL | OBMYSQL |
+  |ORACLE | OBORACLE |
+  |ORACLE | OBMYSQL |
+  |DB2 IBM i | OBORACLE |
+  |DB2 LUW | OBORACLE |
+  |DB2 LUW | OBMYSQL |
+  |OBMYSQL  | MYSQL |
+  |OBORACLE | ORACLE |
 
   其中 OBMYSQL 为 OceanBase 数据库的 MySQL租户，OBORACLE 为 OceanBase 数据库的 Oracle 租户。
 
@@ -164,7 +163,6 @@ bin/dbcat convert -H 172.30.xxx.xxx  -P 2883 -uroot -pxxxxx -D test --from obmys
   |ORACLE|oracle9i</br>oracle10g</br>oracle11g</br>oracle12c</br>oracle18c</br>oracle19c</br>|
   |OBMYSQL|obmysql14x</br>obmysql21x</br>obmysql22x</br>obmysql200</br>obmysql211</br>obmysql2210</br>obmysql2230</br>obmysql2250</br>obmysql2271 ~ obmysql2277</br>obmysql30x</br>obmysql31x</br>obmysql32x</br>obmysql322</br>obmysql40|
   |OBORACLE|oboracle2220</br>oboracle2230</br>oboracle2250</br>oboracle2270 ~ oboracle2277</br>oboracle21x</br>oboracle22x</br>oborcle30x</br>oboracle31x</br>oboracle32x</br>oboracle322</br>oboracle40|
-
 
 运行后的输出文件在用户 `home` 目录的 `output` 下。
 
@@ -187,9 +185,10 @@ MySQL [test]> source TABLE-schema.sql
 Query OK, 0 rows affected (0.044 sec)
 ```
 
->注意
->
->如果 sql 文件不在当前目录下，则需要使用绝对地址。
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>如果 sql 文件不在当前目录下，则需要使用绝对地址。</p>
+</main>
 
 ## 导数结果验证
 
