--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/2.application-development-1/2.python-application-1/03.connect-the-python-application-to-oceanbase.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/2.application-development-1/2.python-application-1/03.connect-the-python-application-to-oceanbase.md
@@ -34,7 +34,7 @@ This topic describes how to connect Python applications to OceanBase Database by
    def ob_test():   
            url = 'jdbc:oceanbase://host:port/database'
            user = '**u***'
-           password = '**1***'
+           password = '******'
            driver = 'com.alipay.oceanbase.jdbc.Driver'
            jarFile = './oceanbase-client-2.2.3.jar'
            sqlStr = 'select * from test_python'  
