--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -10,13 +10,15 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
    支持在下表所示的 Linux 操作系统中安装 OceanBase 数据库。
 
-   |             Linux操作系统         |    版本     | 服务器架构|
-   |-----------------------------------|-----------| ----- |
-   | AliOS                             | 7.2 及以上   | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾）|
-   | CentOS / Red Hat Enterprise Linux | 7.2 及以上   | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾）|
-   | SUSE Enterprise Linux             | 12SP3 及以上 | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾）|
-   | Debian / Ubuntu                   | 8.3 及以上   | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾）|
-   | KylinOS                           | V10         | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾）|
+   |       Linux操作系统       |    版本   |             服务器架构         |
+   |--------------------------|-----------|-------------------------------|
+   | AliOS                    | 7.2 及以上   | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+   | 龙蜥 AnolisOS            | 8.6 及以上   | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+   | KylinOS                  | V10         | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+   | 统信 UOS                 | V20         | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+   | 中科方德 NFSChina         | 4.0 及以上  | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+   | 浪潮 Inspur kos           | 5.8        | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+   | CentOS / Red Hat Enterprise Linux | 7.2 及以上 <blockquote><b>说明</b></br>暂不支持 CentOS 8.X。</blockquote>  | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
 
 2. 服务器配置。
 
