--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -159,7 +159,7 @@ Flink SQL> CREATE TABLE mysql_tbl1 (
     'hostname' = '10.10.10.1',
     'port' = '3306',
     'username' = 'root',
-    'password' = '**1***',
+    'password' = '******',
     'database-name' = 'test_mysql_to_ob',
     'table-name' = 'tbl1');
 [INFO] Execute statement succeed.
@@ -170,7 +170,7 @@ Flink SQL> CREATE TABLE mysql_tbl2 (col1 INT PRIMARY KEY,
     'hostname' = '10.10.10.1',
     'port' = '3306',
     'username' = 'root',
-    'password' = '**1***',
+    'password' = '******',
     'database-name' = 'test_mysql_to_ob',
     'table-name' = 'tbl2');
 [INFO] Execute statement succeed.
@@ -190,7 +190,7 @@ Flink SQL> CREATE TABLE mysql_tbl1_and_tbl2(
     WITH ('connector' = 'jdbc',
     'url' = 'jdbc:mysql://10.10.10.2:2881/test_mysql_to_ob',
     'username' = 'root@mysql001',
-    'password' = '**1***',
+    'password' = '******',
     'table-name' = 'mysql_tbl1_and_tbl2');
 [INFO] Execute statement succeed.
 ```
