--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -184,7 +184,7 @@ Flink SQL> CREATE TABLE ob_tbl1 (
     'scan.startup.mode' = 'initial',
     'tenant-name' = 'mysql001',
     'username' = 'root@mysql001',
-    'password' = '**1***',
+    'password' = '******',
     'database-name' = 'test_ob_to_mysql',
     'table-name' = 'tbl1',
     'hostname' = '10.10.10.2',
@@ -200,7 +200,7 @@ Flink SQL> CREATE TABLE ob_tbl2 (col1 INT PRIMARY KEY,
     'scan.startup.mode' = 'initial',
     'tenant-name' = 'mysql001',
     'username' = 'root@mysql001',
-    'password' = '**1***',
+    'password' = '******',
     'database-name' = 'test_ob_to_mysql',
     'table-name' = 'tbl2',
     'hostname' = '10.10.10.2',
@@ -225,7 +225,7 @@ Flink SQL> CREATE TABLE ob_tbl1_and_tbl2(
     WITH ('connector' = 'jdbc',
     'url' = 'jdbc:mysql://10.10.10.1:3306/test_ob_to_mysql',
     'username' = 'root',
-    'password' = '**1***',
+    'password' = '******',
     'table-name' = 'ob_tbl1_and_tbl2');
 [INFO] Execute statement succeed.
 ```
