--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/25.zone.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/25.zone.md
@@ -12,7 +12,10 @@
 ## 语法
 
 ```sql
-alter_system_zone_stmt:
+alter_system_zone_stmt:    
+    ALTER SYSTEM zone_action;
+    
+zone_action:
       ADD ZONE zone_name
       [zone_option_list]
     | {ALTER | CHANGE | MODIFY} ZONE zone_name
