--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
@@ -119,7 +119,9 @@ opt_for_grant_user:
   | gbk     | GBK charset           | gbk_chinese_ci     |      2 |
   | utf16   | UTF-16 Unicode        | utf16_general_ci   |      2 |
   | gb18030 | GB18030 charset       | gb18030_chinese_ci |      4 |
+  | latin1  | cp1252 West European  | latin1_swedish_ci  |      1 |
   +---------+-----------------------+--------------------+--------+
+  6 rows in set
   ```
 
 * 查看支持的字符序。
@@ -140,7 +142,10 @@ opt_for_grant_user:
   | utf16_unicode_ci   | utf16   | 101 |         | Yes      |       1 |
   | gb18030_chinese_ci | gb18030 | 248 | Yes     | Yes      |       1 |
   | gb18030_bin        | gb18030 | 249 |         | Yes      |       1 |
+  | latin1_swedish_ci  | latin1  |   8 | Yes     | Yes      |       1 |
+  | latin1_bin         | latin1  |  47 |         | Yes      |       1 |
   +--------------------+---------+-----+---------+----------+---------+
+  13 rows in set
   ```
 
 * 查看当前的会话状态。
