--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/178.dbms-udr-mysql/2.create-rule-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/178.dbms-udr-mysql/2.create-rule-mysql.md
@@ -35,12 +35,12 @@ PROCEDURE CREATE_RULE (
 - `pattern` 跟 `replacement` 不支持 Multi Query。
 - `rule_name` 需要保证租户级唯一。
 - 规则模板中 `pattern` 跟 `replacement` 的参数标记个数必须相同。
-- 规则模板中 `pattern` 跟 `replacement` 的参数表示方式必须相同（都用“?”表示，或者都用“:{name}”表示)。
+- 规则模板中 `pattern` 跟 `replacement` 的参数表示方式必须相同（都用“?”表示，或者都用“:{name}”表示）。
 
 ## 示例
 
 ```shell
-obclient> CALL DBMS_UDR.CREATE_RULE('rule1','test','select ? from dual','select ? + 1 from dual');
+obclient> CALL DBMS_UDR.CREATE_RULE ('rule1','test','select ? from dual','select ? + 1 from dual');
 Query OK, 0 rows affected 
 
 obclient> SELECT 1 FROM DUAL;
