--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/7.create-trigger-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/7.create-trigger-mysql.md
@@ -10,6 +10,7 @@ CREATE
     TRIGGER [IF NOT EXISTS] trigger_name
     trigger_time trigger_event
     ON table_name FOR EACH ROW
+    [trigger_order]
     trigger_body
 
 trigger_time: { BEFORE | AFTER }
