--- a/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
+++ b/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
@@ -50,9 +50,10 @@ OceanBase 数据库支持的数据类型有：
 
 * 集合类型：`SET`。
 
-* JSON 数据类型。
+* JSON 数据类型
 
-与 MySQL 数据库对比，OceanBase 数据库暂不支持空间数据类型，其他类别的数据类型支持情况是等于或大于 MySQL 数据库的。
+* 空间数据类型
+
 
 ## SQL 语法
 
@@ -137,15 +138,15 @@ OceanBase 数据库兼容 MySQL 数据库的部分字符集和字符序，具体
 
 与 MySQL 数据库对比，OceanBase 数据库的 MySQL 模式不支持如下函数：
 
-* 字符串函数：`CHARACTER_LENGTH()`、`LOAD_FILE()`、`MATCH()` 和 `OCTET_LENGTH()`。
+* 字符串函数：`LOAD_FILE()` 和 `MATCH()`。
 
 * XML 函数：`ExtractValue()` 和 `UpdateXML()`。
 
 * 锁定函数：`GET_LOCK()`、`IS_FREE_LOCK()`、`IS_USED_LOCK()`、`RELEASE_ALL_LOCKS()` 和 `RELEASE_LOCK()`。
 
-* 其他函数：`MASTER_POS_WAIT()` 和 `NAME_CONST()` 。
+* 其他函数：`MASTER_POS_WAIT()` 。
 
-另外，OceanBase 数据库的 MySQL 模式不支持空间分析函数和性能模式函数。OceanBase 数据库所支持的分析（窗口）函数是 MySQL 数据库的超集，即 MySQL 数据库的分析（窗口）函数都支持。
+OceanBase 数据库所支持的分析（窗口）函数是 MySQL 数据库的超集，即 MySQL 数据库的分析（窗口）函数都支持。
 
 ## 分区支持
 
@@ -237,11 +238,7 @@ OceanBase 数据库在优化器方面与 MySQL 数据库的区别，主要表现
 
 ## 暂不支持的功能
 
-* 暂不支持空间数据类型。
-
 * 不支持 `SELECT ... FOR SHARE ...` 语法。
-
-* 不支持空间分析函数和性能模式函数。
 
 * 对于备份恢复功能，不支持集群级别的备份恢复，不支持冷备份，不支持租户内部部分数据库和表级的备份恢复，备份数据的有效性验证。
 
