410系统概览-更新触发器相关内容

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/4.trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/4.trigger-of-oracle-mode.md
@@ -28,6 +28,10 @@ OceanBase 数据库可以创建以下几种类型触发器：
 
   INSTEAD OF 触发器创建在视图上，当对视图执行触发语句时自动触发。INSTEAD OF 触发器可以用来修改无法直接通过 DML 语句修改的视图。
 
+* 组合 DML 触发器
+
+  组合 DML 触发器可以创建于表或可编辑视图上，支持在多个时间点触发。组合触发器按照每个时间点分隔成段，每个时间段都包含独立的可执行部分和异常处理部分（可选的）。
+
 ## 触发器的触发时机 
 
 您可以定义触发器的触发时机，触发时机是指触发操作在触发语句之前还是之后运行。
@@ -75,6 +79,15 @@ CREATE [OR REPLACE] TRIGGER trigger_name triggering_statement
 BEGIN
  triggered_action;
 END
+
+triggering_statementL:
+  {BEFORE | AFTER }
+  {INSERT | DELETE | UPDATE [OF column [, column ...]]}
+  ON [schema.] table_name 
+  [REFERENCING {OLD [AS] old | NEW [AS] new| PARENT as parent}]
+  FOR EACH ROW
+  [WHEN condition]
+  [FOLLOWS | PRECEDES] other_trigger_name
 ```
 
 一个触发器的基本结构如下：
