--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
@@ -32,15 +32,19 @@ OceanBase 数据库 MySQL 模式当前主要支持以下类型的触发器：
 
 ```sql
 CREATE
-    TRIGGER trigger_name
+    [DEFINER = user]
+    TRIGGER [IF NOT EXISTS] trigger_name
     trigger_time trigger_event
-    ON tbl_name FOR EACH ROW
+    ON table_name FOR EACH ROW
     trigger_body
 
 trigger_time: { BEFORE | AFTER }
 
 trigger_event: { INSERT | UPDATE | DELETE }
+
+trigger_order: { FOLLOWS | PRECEDES } other_trigger_name
 ```
+
 
 语法说明：
 
@@ -53,6 +57,8 @@ trigger_event: { INSERT | UPDATE | DELETE }
 * `INSERT`、`UPDATE` 或 `DELETE` 表示触发事件，即激活触发器的操作类型。
 
 * `FOR EACH ROW` 用于定义触发器的主体，每次触发器激活时就会执行该语句，对于受触发事件影响的每一行都会执行一次。
+
+* `trigger_order` 子句可以通过关键字 `FOLLOWS` 和 `PRECEDES` 指定具有相同触发器事件和操作时间的触发器顺序。`FOLLOWS` 关键字表示新触发器将在现有触发器之后激活。`PRECEDES` 关键字表示新触发器在现有触发器之前激活。
 
 OceanBase 数据库中也定义了 `NEW.columnName` 和 `OLD.columnName`：
 
@@ -95,7 +101,7 @@ DELIMITER new_delemiter
 
 其中，`new_delemiter` 可以设置为 1 个或多个字节长度的符号，默认为分号（;），您可以将其修改为其他符号，例如 `#`。
 
-添加 `DELIMITER` 命令后， `DELIMITER` 命令后的语句再使用分号则不会报错，直到遇到设置的结束符（`#`），才认为该语句结束。
+添加 `DELIMITER` 命令后，`DELIMITER` 命令后的语句再使用分号则不会报错，直到遇到设置的结束符（`#`），才认为该语句结束。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
